despliegue/pro/tfm-iaap-frontend-administracion-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tfm-iaap-frontend-administracion-pro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tfm-iaap-frontend-administracion-pro
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tfm-iaap-frontend-administracion-pro
    spec:
      serviceAccountName: pipeline
      imagePullSecrets:
        - name: quay-secret-token
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      securityContext: {}
      volumes:
        - name: config-volume
          configMap:
            name: tfm-iaap-frontend-administracion-configmap-inject-file
            items:
              - key: config.json
                path: config.json
      containers:
        - name: tfm-iaap-frontend-administracion-pro
          image: quay.apps.paas-ges-cica.junta-andalucia.es/ada/sicol/tfm-iaap-frontend-administracion:1.0.2-pro
          imagePullPolicy: Always
          ports:
            - containerPort: 8043
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config/config.json
              subPath: config.json
          resources:
            limits:
              cpu: 200m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 500Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
