despliegue/pro/tfm-iaap-frontend-administracion-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tfm-iaap-frontend-administracion-route-pro
  labels:
    app: tfm-iaap-frontend-administracion-pro
spec:
  host: tfm-iaap-frontend-administracion-route-pro.apps.paas-des-cica.junta-andalucia.es
  to:
    kind: Service
    name: tfm-iaap-frontend-administracion-svc-pro
    weight: 100
  port:
    targetPort: 8043
  tls:
    termination: edge
  wildcardPolicy: None
